--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,12 @@
 
 .navigation {
   display: flex;
+  border-bottom: 1px solid black;
 }
 
 .link {
   margin-right: 15px;
+  margin-bottom: 20px;
   padding: 15px;
   text-decoration: none;
   color: tomato;
